# justanotherdot

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justanotherdot.cabal  package.json  rust-toolchain.toml
.buildkite/: pipeline.yml
.circleci/: config.yml
.github/: dependabot.yml
app/: Main.hs
deploy/: index.html  rss.xml  sitemap.xml  subscribe.html
deploy-obelisk/: index.html  rss.xml  sitemap.xml
deploy-obelisk/posts/: a-love-letter-to-composition.html  a-love-letter-to-feedback-loops.html  a-love-letter-to-patterns.html  a-love-letter-to-principles.html  a-plea-for-style-guides.html  a-reading-diet.html  a-release-does-not-make-a-deploy.html  actually-using-worktrees.html  an-architecture-agnostic-intro-to-assembly.html  an-infinite-barrage-of-mountains-to-climb.html  an-opinionated-guide-to-structuring-rust-projects.html  avoid-build-cache-bloat-by-sweeping-away-artifacts.html  bankruptcy.html  benchmark-it.html  bindings-are-cheap-managing-rightward-drift.html  building-an-intuition-for-pattern-matching.html  catching-panics-in-dependencies.html  consistent-date-handling.html  custom-search-functionality-for-coding.html  cut-down-on-clones-with-cows.html  cut-down-time-debugging-with-rich-error-types.html  default-to-trust.html  discovering-problematic-commits-with-git-bisect.html  dumping-grounds-for-good-and-bad.html  error-handling-with-closures-in-iterators.html  errors-across-a-boundary.html  fail-fast-not-error-out.html  feature-flag-cleanly-with-blocks.html  fools-gold-code-coverage.html  fools-gold-time-estimates.html  fools-gold.html  four-ways-to-avoid-the-wrath-of-the-borrow-checker.html  habit-a-tale-of-two-water-bottles.html  harvesting-pull-requests.html  hi.html  how-do-you-cast-generic-values-youre-sure-are-numbers.html  how-fast-can-you-take-your-time-kid.html  how-i-git.html  how-to-pick-stable-beta-or-nightly-rust.html  how-to-return-an-iterator-from-a-function.html  (+64 more)
deploy-obelisk/tags/: .html  assembly.html  automation.html  benchmarking.html  books.html  career.html  code_style.html  coding.html  date_handling.html  debugging.html  delivery.html  demos.html  distribution.html  editor.html  engineering_leadership.html  error-handling.html  estimation.html  fools-gold.html  generics.html  git.html  go.html  habit.html  hardware.html  haskell.html  imposter-syndrome.html  infrastructure.html  javascript.html  leadership.html  learning.html  (+32 more)
justanotherdot/: Cargo.toml
obelisk/: Cargo.toml
obelisk/src/: context.rs  main.rs  template.rs
scripts/: mksite.sh
site-gen/: Cargo.toml
site-gen/src/: context.rs  error.rs  main.rs  template.rs
src/: context.rs  error.rs  main.rs  template.rs
(+429 files in other folders)
