[package]
name = "site-gen"
version = "0.1.0"
authors = ["Ryan James Spencer <spencer.ryanjames@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
ramhorns = "0.5.0"
chrono = "0.4.10"
walkdir = "2.2.9"
lazy_static = "1.4.0"
regex = "1.3.3"
