[workspace]
members = [
    "site-gen",
    "obelisk",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4.23"
walkdir = "2.5.0"
lazy_static = "1.4.0"
regex = "1.4.2"
chrono-tz = "0.8.6"
pulldown-cmark = "0.10"
handlebars = "6.0"