[package]
name = "site-gen"
version = "0.1.0"
authors = ["Ryan James Spencer <spencer.ryanjames@gmail.com>"]
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
ramhorns = "0.6.1"
chrono = { workspace = true }
walkdir = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
chrono-tz = { workspace = true }